# osc-quintette

./: .gitignore  CONTRIBUTING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: index.rst  installation.rst  usage.rst
oscquintette/: exceptions.py  plugin.py
oscquintette/compute/v2/: server.py
oscquintette/sdk/compute/v2/: server.py
oscquintette/tests/: base.py  fakes.py  test_oscquintette.py
oscquintette/tests/v1/: test_plugin.py
oscquintette/v1/: client.py  find.py  plugin.py  qserver.py
