[metadata]
name = python-oscquintette
summary = OSC plugin for basic compound actions
description-file =
    README.rst
author = Dean Troyer
author-email = dtroyer@gmail.com
home-page = https://github.com/dtroyer/python-oscquintette
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    oscquintette

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oscquintette/locale
domain = python-oscquintette

[update_catalog]
domain = python-oscquintette
output_dir = oscquintette/locale
input_file = oscquintette/locale/python-oscquintette.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oscquintette/locale/python-oscquintette.pot

[entry_points]
openstack.cli.extension =
    oscquintette = oscquintette.plugin

openstack.oscquintette.v1 =
    flavor_find = oscquintette.v1.find:FindFlavor
    server_create = oscquintette.v1.qserver:CreateQServer
    server_show = oscquintette.v1.qserver:ShowQServer

    create_server = oscquintette.v1.qserver:CreateQServer
    find_flavor = oscquintette.v1.find:FindFlavor
    show_server = oscquintette.v1.qserver:ShowQServer

openstack.compute.v2 =
    show_flavor = openstackclient.compute.v2.flavor:ShowFlavor
